dist/1.0/bin/sample/retrieveUnpackaged/objects/Component_Line__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Component__c</fullName>
        <description>Relation to Bundle-Component</description>
        <inlineHelpText>Relation to Bundle-Component</inlineHelpText>
        <label>Bundle Component</label>
        <referenceTo>Bundle_Component__c</referenceTo>
        <relationshipLabel>Component Lines</relationshipLabel>
        <relationshipName>Component_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connection_Point__c</fullName>
        <description>Connection Point for this line</description>
        <inlineHelpText>Connection Point for this line</inlineHelpText>
        <label>Connection Point</label>
        <picklist>
            <picklistValues>
                <fullName>REDIRECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCOMING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUTGOING</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Line Type for this line</description>
        <inlineHelpText>Line Type for this line</inlineHelpText>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>COLOURLINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAINBOWLINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOICE_DIRECT_M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOICE_IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOICE_INDIRECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique Relationship identifier which can be used for data synchronization between diferent systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Relationship identifier which can be used for data synchronization between diferent systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Component Line</label>
    <nameField>
        <displayFormat>CL-{000000000}</displayFormat>
        <label>Component Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>